--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,15 @@
   line-height: 78px;
   font-weight: 400;
 }
+
+span {
+  color: white;
+}
+
+p {
+  color: white;
+}
+
+div {
+  color: white;
+}
